@@ -911,6 +911,7 @@ remove_query_data (
 			mod.sml_desc = ad_queryid;
 			mod.sml_type = ad_queryid->ad_cname;
 			mod.sml_values = vals;
+			mod.sml_nvalues = NULL;
 			mod.sml_next = NULL;
 #ifdef NEW_LOGGING
 			LDAP_LOG( BACK_META, DETAIL1,
